get /ping + put /view added
